--- a/index.html
+++ b/index.html
@@ -148,21 +148,43 @@
     <div class="prices">
       <h2>أسعار التأشيرات 🌍</h2>
       <div class="price-box">
-        <p><strong>تأشيرات مسقط 🇴🇲</strong><br>شهر: 2500 ريال<br>10 أيام: 1100 ريال</p>
-        <p><strong>تأشيرات البحرين 🇧🇭</strong><br>أسبوعين: 2500 ريال<br>3 شهور متعدد: 3500 ريال<br>سنة: 8500 ريال<br><span class="note">⚠ في حالة الرفض بيخسر 1200ج ⚠</span></p>
-        <p><strong>تركيا 🇹🇷</strong>: 2500 جنيه</p>
-        <p><strong>حجز تساهيل 🇸🇦</strong>: 1600 جنيه</p>
-        <p><strong>إنجاز 🇸🇦</strong>: 5600 جنيه</p>
-        <p><strong>فيتنام 🇻🇳</strong>: 3050 جنيه</p>
-        <p><strong>أرمينيا 🇦🇲</strong>: 1550 جنيه</p>
-        <p><strong>جورجيا 🇬🇪</strong>: 2200 جنيه</p>
-        <p><strong>كينيا 🇰🇪</strong>: 3050 جنيه</p>
-        <p><strong>تايلاند 🇨🇷</strong>: 3050 جنيه</p>
-        <p><strong>المغرب 🇲🇦</strong>: 3050 جنيه</p>
-        <p><strong>باكستان 🇵🇰</strong>: 2550 جنيه</p>
-        <p><strong>أوزباكستان 🇸🇱</strong>: 2550 جنيه</p>
-        <p><strong>طاجيكستان 🇹🇯</strong>: 2950 جنيه</p>
-        <p><strong>قيرغيزستان 🇰🇬</strong>: 2950 جنيه</p>
+           <p><strong>تأشيرات مسقط 🇴🇲</strong><br>شهر: 2500  <br>        عدد الايام 10 ايام : 1100    </p>
+        <p><strong>تأشيرات البحرين 🇧🇭</strong><br>أسبوعين: 2500  <br>ثلاث اشهر متعدد: 3500 ريال<br>سنة: 8500  <br><span class="note">⚠ في حالة الرفض بيخسر 1200ج ⚠</span></p>
+        <p><strong>تركيا 🇹🇷</strong>: 2500  جنيه</p>
+         
+      <div style="direction: rtl;">
+  <div style="display: flex; justify-content: space-between;">
+    <strong>🇻🇳 فيتنام</strong><span>3050 جنيه</span>
+  </div>
+  <div style="display: flex; justify-content: space-between;">
+    <strong>🇦🇲 أرمينيا</strong><span>1550 جنيه</span>
+  </div>
+  <div style="display: flex; justify-content: space-between;">
+    <strong>🇬🇪 جورجيا</strong><span>2200 جنيه</span>
+  </div>
+  <div style="display: flex; justify-content: space-between;">
+    <strong>🇰🇪 كينيا</strong><span>3050 جنيه</span>
+  </div>
+  <div style="display: flex; justify-content: space-between;">
+    <strong>🇨🇷 تايلاند</strong><span>3050 جنيه</span>
+  </div>
+  <div style="display: flex; justify-content: space-between;">
+    <strong>🇲🇦 المغرب</strong><span>3050 جنيه</span>
+  </div>
+  <div style="display: flex; justify-content: space-between;">
+    <strong>🇵🇰 باكستان</strong><span>2550 جنيه</span>
+  </div>
+  <div style="display: flex; justify-content: space-between;">
+    <strong>🇸🇱 أوزباكستان</strong><span>2550 جنيه</span>
+  </div>
+  <div style="display: flex; justify-content: space-between;">
+    <strong>🇹🇯 طاجيكستان</strong><span>2950 جنيه</span>
+  </div>
+  <div style="display: flex; justify-content: space-between;">
+    <strong>🇰🇬 قيرغيزستان</strong><span>2950 جنيه</span>
+  </div>
+</div>
+
       </div>
 
       <div class="price-box uae">
