--- a/index.html
+++ b/index.html
@@ -162,9 +162,11 @@
         <p><strong>تأشيرات البحرين 🇧🇭</strong><br>أسبوعين: 2500  <br>ثلاث اشهر متعدد: 3500 ريال<br>سنة: 8500  <br><span class="note">⚠ في حالة الرفض بيخسر 1200ج ⚠</span></p>
         <p><strong>تركيا 🇹🇷</strong>: 2500  جنيه</p>
          
-      <div style="direction: rtl;">
-  <div style="display: flex; justify-content: space-between;">
-    <strong>  🇹🇷 تركيا </strong><span>2500 جنيه</span>
+   <!-- قسم الأسعار -->
+    <div class="prices">
+      <h2>أسعار التأشيرات 🌍</h2>
+      <div class="price-box">
+     <div style="direction: rtl;">
   <div style="display: flex; justify-content: space-between;">
     <strong>🇻🇳 فيتنام</strong><span>3050 جنيه</span>
   </div>
@@ -197,7 +199,6 @@
   </div>
 </div>
 
-      </div>
 
       <div class="price-box uae">
         <h3>أسعار تأشيرات الإمارات 🇦🇪</h3>
