--- a/index.html
+++ b/index.html
@@ -537,6 +537,20 @@
 </footer>
 
 
+<script>
+  document.addEventListener('contextmenu', e => {
+    if (e.target.tagName === 'IMG') {
+      e.preventDefault();
+    }
+  });
+
+  // منع الضغط الطويل على الصور للموبايل
+  document.querySelectorAll("img").forEach(img => {
+    img.addEventListener('touchstart', e => {
+      e.preventDefault();
+    });
+  });
+</script>
 
 
 </body>
