--- a/index.html
+++ b/index.html
@@ -515,6 +515,136 @@
 
 
 
+
+
+
+
+
+
+<!--================ قسم الأسئلة الشائعة =================-->
+<section class="faq-section">
+  <div class="faq-container">
+
+    <div class="faq-box">
+      <h3>1️⃣ هل الشغل مضمون فعلًا؟</h3>
+      <p>آه، العقود واضحة ومضمونة، ومش بنسافر حد غير لما يكون كل التفاصيل متفق عليها.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>2️⃣ لو حصلتلي مشكلة في الشغل هناك، بتساعدوني؟</h3>
+      <p>طبعًا، فريقنا بيتابع معاك لحد ما تستقر، ودايمًا موجودين لحل أي مشكلة.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>3️⃣ إيه مدة تنفيذ التأشيرة؟</h3>
+      <p>في الأغلب من 3 لـ 4 شهور، وبعض التأشيرات بتطلع أسرع حسب نوعها.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>4️⃣ هل أقدر أشتغل هناك وأنا مش صنايعي؟</h3>
+      <p>أيوه، في شغل للعمال العاديين كمان، مش لازم تكون صنايعي.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>5️⃣ هو المرتب ثابت ولا بيتغير؟</h3>
+      <p>المرتبات بتبدأ من 22,000 ليرة للعمال وبتوصل لـ 52,000 للصنايعية، حسب الشغل والخبرة.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>6️⃣ إيه اللي داخل في تكلفة الخدمة؟</h3>
+      <p>التأشيرة + الطيران + الاستقبال + خط تليفون + المواصلات + ضمان الراتب + المتابعة سنة كاملة.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>7️⃣ لو حصل تأخير في السفر أعمل إيه؟</h3>
+      <p>إحنا بنتابع كل ملف بدقة، ولو في تأخير بيكون لسبب، وبنبلغ العميل أول بأول.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>8️⃣ هل ينفع أختار الدولة اللي أسافر لها؟</h3>
+      <p>أيوه، في دول كتير بنشتغل فيها، منها تركيا، روسيا، الإمارات، وغيرها.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>9️⃣ في فرص شغل للستات؟</h3>
+      <p>حاليًا بنركز على العمالة الرجالي، لكن لو اتوفرت فرص للسيدات بنعلن فورًا.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>🔟 هل بحتاج أتعلم لغة؟</h3>
+      <p>مش شرط، في شغل كتير مش محتاج لغة، وإحنا بنوضح ده قبل السفر.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>1️⃣1️⃣ ينفع أسافر مع حد من العيلة؟</h3>
+      <p>في حالات معينة ممكن، وده بيتحدد حسب نوع التأشيرة والشغل.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>1️⃣2️⃣ إزاي أقدر أتابع طلبي؟</h3>
+      <p>بنبعتلك تحديثات مستمرة على واتساب من لحظة فتح الملف لحد ما تسافر.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>1️⃣3️⃣ ينفع أدفع جزء من المبلغ في الأول؟</h3>
+      <p>في أنظمة تقسيط لبعض الحالات، تقدر تتواصل معانا ونشرحها ليك.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>1️⃣4️⃣ لو رفضوا التأشيرة، الفلوس بترجع؟</h3>
+      <p>بنديك ورقة رسمية بكل الشروط من البداية، وبيبقى فيها نظام ضمان حسب نوع الطلب.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>1️⃣5️⃣ هل المكتب مسؤول عن السكن هناك؟</h3>
+      <p>في بعض الشغل بيكون فيه سكن متوفر، وده بنوضحه في العقد.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>1️⃣6️⃣ ينفع أشتغل شغل تاني جنب الشغل الأصلي؟</h3>
+      <p>حسب نظام التأشيرة والعقد، بنوضح ليك المسموح واللي لأ.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>1️⃣7️⃣ لو معنديش باسبور، تساعدوني؟</h3>
+      <p>طبعًا، نقدر نوجّهك لإجراءات استخراج جواز السفر خطوة بخطوة.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>1️⃣8️⃣ هل بحتاج شهادة خبرة؟</h3>
+      <p>لبعض الوظائف أيوه، وبعضها لأ. لو مطلوب بنقولك قبل ما تبدأ الإجراءات.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>1️⃣9️⃣ إيه شروط السفر لروسيا أو تركيا؟</h3>
+      <p>بنوفرلك كل التفاصيل بمجرد تحدد الدولة، من حيث الأوراق، التكلفة، والشغل.</p>
+    </div>
+
+    <div class="faq-box">
+      <h3>2️⃣0️⃣ هل في فروع تانية غير الفرع الحالي؟</h3>
+      <p>حاليًا بنشتغل من مكتب واحد فقط، لكن تقدر تتواصل من أي مكان، والخدمة بتوصلك بالكامل أونلاين.</p>
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+
+
+
+
  <!-- ==== Footer توقيع المطور ==== -->
 <footer class="footer-dev">
   <p>مبرمج ومصمم الموقع: <span class="dev-name">Abdelrahman Samy</span></p>
